Added Link to GitHub repo
Added a HyperLink to the GitHub repo on the UI and made a method to open default browser to open the page linked